# feos-core

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy_documentation.yml  test.yml  wheels.yml
build_wheel/: Cargo.toml
build_wheel/src/: cubic.rs  lib.rs  user_defined.rs
docs/: api.rst  conf.py  index.md
docs/examples/: index.rst
example/: Thol_EoS.ipynb  pr-alcohols.json  user_defined_eos.ipynb
examples/: core_concepts.ipynb  user_defined_eos.ipynb
src/: cubic.rs  equation_of_state.rs  errors.rs  joback.rs  lib.rs
src/parameter/: chemical_record.rs  identifier.rs  mod.rs  model_record.rs  segment.rs
src/phase_equilibria/: bubble_dew.rs  mod.rs  phase_diagram_binary.rs  phase_diagram_pure.rs  stability_analysis.rs  tp_flash.rs  vle_pure.rs
src/python/: cubic.rs  joback.rs  mod.rs  parameter.rs  phase_equilibria.rs  state.rs  statehd.rs  user_defined.rs  utils.rs
src/state/: builder.rs  cache.rs  critical_point.rs  mod.rs  properties.rs
src/utils/: dataset.rs  estimator.rs  loss.rs  mod.rs
