[package]
name = "build_wheel"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <rehner@itt.uni-stuttgart.de"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
feos-core = { path = "..", features = ["python", "openblas-static"] }

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36"]

